# pollterra-contract

./: Cargo.toml  README.md  build_release.sh
.github/: pull_request_template.md
.github/workflows/: Basic.yml
artifacts/: checksums.txt  checksums_intermediate.txt  community.wasm  distributor.wasm  governance.wasm  meta_contract.wasm  opinion_poll.wasm  pollterra_contract-aarch64.wasm  pollterra_contract.wasm  prediction_poll.wasm
contracts/: README.md
contracts/community/: Cargo.toml  NOTICE  README.md
contracts/community/examples/: schema.rs
contracts/community/schema/: execute_msg.json
contracts/community/src/: contract.rs  entrypoints.rs  error.rs  executions.rs  lib.rs  msg.rs  queries.rs  state.rs  tests.rs  utils.rs
contracts/distributor/: Cargo.toml  README.md
contracts/distributor/examples/: schema.rs
contracts/distributor/schema/: contract_state.json  execute_msg.json
contracts/distributor/src/: contract.rs  entrypoints.rs  error.rs  executions.rs  lib.rs  msg.rs  queries.rs  state.rs  tests.rs  utils.rs
contracts/governance/: Cargo.toml
contracts/governance/examples/: schema.rs
contracts/governance/schema/: execute_msg.json
contracts/governance/src/: contract.rs  entrypoints.rs  executions.rs  lib.rs  msg.rs  queries.rs  staking.rs  state.rs  (+1 more)
contracts/meta-contract/: Cargo.toml  build.rs
contracts/opinion-poll/: Cargo.toml
contracts/prediction-poll/: Cargo.toml  README.md
examples/: schema.rs
examples/schema/: query_msg.json
schema/: execute_msg.json  instantiate_msg.json
src/: contract.rs  msg.rs  state.rs
(+76 files in other folders)
